docker/build-push-action multiplatform update

--- a/.github/workflows/actions/docker-publish/action.yml
+++ b/.github/workflows/actions/docker-publish/action.yml
@@ -26,6 +26,7 @@ runs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
     - name: Docker Scout
       id: docker-scout
       if: ${{ github.event_name != 'pull_request' }}
