--- a/.github/workflows/actions/docker-publish-all/action.yml
+++ b/.github/workflows/actions/docker-publish-all/action.yml
@@ -7,6 +7,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@edfb0fe6204400c56fbfd3feba3fe9ad1adfa345
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
