Revert "bitnami sdk image is replaced with microsoft sdk image"
This reverts commit a17873ad22edaa398d1f05f059c3e80ffa410d11.

--- a/Sample.Hosted/Dockerfile
+++ b/Sample.Hosted/Dockerfile
@@ -42,7 +42,7 @@ ENV DRN_TARGET_PLATFORM=${TARGETPLATFORM};
 WORKDIR /app
 
 #https://learn.microsoft.com/en-us/dotnet/core/tools/dotnet-build
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-jammy AS build
+FROM --platform=$BUILDPLATFORM bitnami/dotnet-sdk:8 AS build
 ARG PROJECT
 ARG TARGETPLATFORM
 ARG BUILDPLATFORM
