SSL support made opt in to suupport linkerd mTLS. Linkerd sidecars will encrypt plain connections

--- a/.github/workflows/actions/docker-publish/action.yml
+++ b/.github/workflows/actions/docker-publish/action.yml
@@ -27,6 +27,8 @@ runs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/amd64,linux/arm64
+        sbom: true
+        provenance: true
     - name: Docker Scout
       id: docker-scout
       if: ${{ github.event_name != 'pull_request' }}
