--- a/DRN.Nexus.Hosted/Dockerfile
+++ b/DRN.Nexus.Hosted/Dockerfile
@@ -7,6 +7,7 @@ ARG HTTPPORT=5988
 
 #https://www.mytechramblings.com/posts/testing-chiseled-ubuntu-containers-with-dotnet/
 #https://hub.docker.com/r/ubuntu/dotnet-aspnet use this dotnet deps with self contained apps are not supported with dockerfastmode
+#https://devblogs.microsoft.com/dotnet/improving-multiplatform-container-support/ enable buildkit to build multiplatform images
 FROM --platform=$TARGETPLATFORM ubuntu/dotnet-aspnet:8.0_edge AS base
 ARG SSLPORT
 ARG HTTPPORT
@@ -22,24 +23,25 @@ ENV DRN_BUILD_PLATFORM=${BUILDPLATFORM}
 #Bind ports from rider build configs or use docker compose
 #https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints
 
-EXPOSE $SSLPORT/udp
 EXPOSE $SSLPORT/tcp
 EXPOSE $HTTPPORT/tcp
 
-#Set the HTTPS redirect port. Used in enforcing HTTPS.
+#Set the HTTPS redirect port. Used for enforcing HTTPS.
 ENV ASPNETCORE_HTTPS_PORTS=${SSLPORT};
 ENV ASPNETCORE_HTTP_PORTS=${HTTPPORT};
 #https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints?view=aspnetcore-8.0
-ENV ASPNETCORE_URLS=https://+:${SSLPORT};http://+:${HTTPPORT};
+ENV ASPNETCORE_URLS=http://+:${HTTPPORT};
+#ENV ASPNETCORE_URLS=https://+:${SSLPORT};http://+:${HTTPPORT};
 
 #Create certificates then map volume in host
 #dotnet dev-certs https -ep ${HOME}/.aspnet/https/aspnetapp.pfx -p <CREDENTIAL_PLACEHOLDER>
 #change drn with actual CREDENTIAL_PLACEHOLDER in ENV ASPNETCORE_Kestrel__Certificates__Default__Password
 #dotnet dev-certs https --trust
 #~/.aspnet/https:/https
-ENV ASPNETCORE_Kestrel__Certificates__Default__Password=drn
-ENV ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+#ENV ASPNETCORE_Kestrel__Certificates__Default__Password=drn
+#ENV ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
 
+USER app
 WORKDIR /app
 
 #https://learn.microsoft.com/en-us/dotnet/core/tools/dotnet-build
