--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,7 +17,10 @@ jobs:
       SONAR_HOST_URL: https://sonarcloud.io
       SONAR_ORGANIZATION: duranserkan
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Scan File System Vulnerabilities
         uses: ./.github/workflows/actions/scan-file-system-vulnerabilities
       - name: Setup SDK
