--- a/DRN.Test/DRN.Test.csproj
+++ b/DRN.Test/DRN.Test.csproj
@@ -14,8 +14,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\DRN.Framework.Testing\DRN.Framework.Testing.csproj"/>
-        <ProjectReference Include="..\DRN.Nexus.Application\DRN.Nexus.Application.csproj" />
-        <ProjectReference Include="..\Sample.Application\Sample.Application.csproj" />
+        <ProjectReference Include="..\DRN.Nexus.Hosted\DRN.Nexus.Hosted.csproj" />
         <ProjectReference Include="..\Sample.Hosted\Sample.Hosted.csproj" />
     </ItemGroup>
     
