--- a/DRN.Test/DRN.Test.csproj
+++ b/DRN.Test/DRN.Test.csproj
@@ -52,6 +52,9 @@
         <None Update="Tests\Framework\Testing\Providers\alternateSettings.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Tests\Framework\Utils\Configurations\settings.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     
     <ItemGroup>
