--- a/DRN.Test/DRN.Test.csproj
+++ b/DRN.Test/DRN.Test.csproj
@@ -55,10 +55,12 @@
         <None Update="Tests\Framework\Utils\Configurations\settings.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-    </ItemGroup>
-    
-    <ItemGroup>
-      <Folder Include="Tests\Framework\" />
+        <None Update="Tests\Framework\Hosting\MountDir\key-per-file-settings\postgres-password">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Tests\Framework\Hosting\MountDir\json-settings\settings-override.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
