--- a/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
+++ b/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
@@ -37,6 +37,7 @@
     </Target>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.KeyPerFile" Version="8.0.3" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     </ItemGroup>
 
