--- a/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
+++ b/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DRN.Framework.Hosting\DRN.Framework.Hosting.csproj" />
     <ProjectReference Include="..\DRN.Nexus.Application\DRN.Nexus.Application.csproj" />
   </ItemGroup>
 
