Serilog integration refactored

--- a/DRN.Nexus.Hosted/appsettings.json
+++ b/DRN.Nexus.Hosted/appsettings.json
@@ -1,9 +1,30 @@
 ﻿{
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning"
+      "Microsoft": "Warning",
+      "System": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Graylog"
+    ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Graylog",
+        "Args": {
+          "hostnameOrAddress": "localhost",
+          "port": "12201",
+          "transportType": "Udp"
+        }
+      }
+    ]
+  }
 }
