verbose microsoft and system logs filtered

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -1,21 +1,25 @@
 ﻿{
   "AllowedHosts": "*",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "System":"Warning"
-    }
-  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
       "Serilog.Sinks.Graylog"
     ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[BEGIN {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}{Message:lj}{NewLine}{Exception}{NewLine}[END {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}"
+        }
       },
       {
         "Name": "Graylog",
