asp request pipeline refactored

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -1,6 +1,18 @@
 ﻿{
   "AllowedHosts": "*",
+  "Kestrel": {
+    "Docs": "https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints",
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    },
+    "Endpoints": {
+      "All": {
+        "Url": "http://*:5998"
+      }
+    }
+  },
   "Serilog": {
+    "Docs": "https://github.com/serilog/serilog-settings-configuration",
     "Using": [
       "Serilog.Sinks.Console",
       "Serilog.Sinks.Graylog"
@@ -18,7 +30,7 @@
         "Name": "Console",
         "Args": {
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[BEGIN {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}{Message:lj}{NewLine}{Exception}{NewLine}[END {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}"
+          "outputTemplate": "[BEGIN {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}{Message:lj}{NewLine}[END {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}"
         }
       },
       {
