--- a/DRN.Nexus.Infra/DRN.Nexus.Infra.csproj
+++ b/DRN.Nexus.Infra/DRN.Nexus.Infra.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DRN.Framework.EntityFramework\DRN.Framework.EntityFramework.csproj" />
     <ProjectReference Include="..\DRN.Nexus.Utils\DRN.Nexus.Utils.csproj" />
   </ItemGroup>
 
