--- a/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
+++ b/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DRN.Framework.Hosting\DRN.Framework.Hosting.csproj" />
+    <ProjectReference Include="..\DRN.Framework.Testing\DRN.Framework.Testing.csproj" />
     <ProjectReference Include="..\DRN.Nexus.Application\DRN.Nexus.Application.csproj" />
   </ItemGroup>
 
