npgsql & postgres updates + test & code refactor

--- a/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
+++ b/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
@@ -31,6 +31,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" PrivateAssets="none"/>
+        <PackageReference Include="Npgsql" Version="8.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
         <PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
     </ItemGroup>
