DrnServiceContainer attribute based module registration refactored DbContextOptionsBuilder logging improvements NpgsqlDbContextOptionsAttribute concurrency fix nuget packages updated

--- a/DRN.Nexus.Hosted/appsettings.json
+++ b/DRN.Nexus.Hosted/appsettings.json
@@ -22,7 +22,8 @@
       "Override": {
         "Microsoft.Hosting.Lifetime": "Information",
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Npgsql": "Warning"
       }
     },
     "WriteTo": [
