TestContext GetSettingsData and GetSettingsPath method added to improve settings visibility Settings provider refactored with new data provider

--- a/DRN.Test/DRN.Test.csproj
+++ b/DRN.Test/DRN.Test.csproj
@@ -64,6 +64,9 @@
         <None Update="Data\globalData.txt">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Settings\globalDummySettings.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
