QA Category controller performance test added + some code refactor

--- a/Sample.Hosted/Sample.Hosted.csproj
+++ b/Sample.Hosted/Sample.Hosted.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\DRN.Framework.Hosting\DRN.Framework.Hosting.csproj" />
     <ProjectReference Include="..\DRN.Framework.Testing\DRN.Framework.Testing.csproj" />
     <ProjectReference Include="..\Sample.Application\Sample.Application.csproj" />
+    <ProjectReference Include="..\Sample.Contract\Sample.Contract.csproj" />
   </ItemGroup>
 
 </Project>
