--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -11,6 +11,13 @@
       }
     }
   },
+  "HostOptions": {
+    "ShutdownTimeout": "00:00:15",
+    "StartupTimeout": "00:00:15",
+    "ServicesStartConcurrently": true,
+    "ServicesStopConcurrently": true,
+    "BackgroundServiceExceptionBehavior": "StopHost"
+  },
   "Serilog": {
     "Docs": "https://github.com/serilog/serilog-settings-configuration",
     "Using": [
