application context configuration checks - test config vs app config

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -18,6 +18,8 @@
     "ServicesStopConcurrently": true,
     "BackgroundServiceExceptionBehavior": "StopHost"
   },
+  "SaganStandard": "Extraordinary claims require extraordinary evidence",
+  "PhilosophicalRazor": "What can be asserted without evidence can be dismissed without evidence",
   "Serilog": {
     "Docs": "https://github.com/serilog/serilog-settings-configuration",
     "Using": [
