--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -1,6 +1,7 @@
 ﻿{
   "DrnAppFeatures": {
     "AutoMigrateDevEnvironment": true,
-    "LaunchExternalDependencies": true
+    "LaunchExternalDependencies": true,
+    "UseHttpRequestLogger": true
   }
 }
