Nexus request improvements

--- a/DRN.Nexus.Hosted/appsettings.Development.json
+++ b/DRN.Nexus.Hosted/appsettings.Development.json
@@ -2,6 +2,8 @@
   "DrnAppFeatures": {
     "AutoMigrateDevEnvironment": true,
     "LaunchExternalDependencies": true,
-    "UseHttpRequestLogger": true
+    "UseHttpRequestLogger": true,
+    "InternalRequestHttpVersion": "2.0",
+    "NexusAddress": "localhost:5988"
   }
 }
