--- a/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
+++ b/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
@@ -45,6 +45,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.8" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
         <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1" />
