--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "ApplicationName":"DRN Sample",
   "AllowedHosts": "*",
   "Kestrel": {
     "Docs": "https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints",
