--- a/Sample.Hosted/Sample.Hosted.csproj
+++ b/Sample.Hosted/Sample.Hosted.csproj
@@ -19,5 +19,10 @@
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.8" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
+  </ItemGroup>
 
 </Project>
