--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -21,12 +21,23 @@ jobs:
         run: git branch --remote --contains | grep origin/develop
       - name: Set VERSION variable from tag
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - name: Initialize CodeQL #CodeQL Init
+        uses: github/codeql-action/init@v3
+        with:
+          languages: csharp,javascript
       - name: Setup SDK
         uses: ./.github/workflows/actions/setup-sdk-and-tools
       - name: Build
         uses: ./.github/workflows/actions/dotnet-build-release
+      - name: Perform CodeQL Analysis #CodeQL Analyze
+        uses: github/codeql-action/analyze@v3
       - name: Test
         uses: ./.github/workflows/actions/dotnet-test-release
+      - name: Upload CodeQL results #CodeQL Upload
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          category: codeql-scan
       - name: Publish Packages
         uses: ./.github/workflows/actions/nuget-publish-all
       - name: Publish Images
