--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -1,9 +1,11 @@
 # this pipeline developed with the help of https://github.com/acraven/blog-nuget-workflow-github-actions/
 name: release-preview
+
 on:
   push:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+-preview[0-9][0-9][0-9]
+      -
 jobs:
   Publish-Develop:
     permissions:
@@ -17,24 +19,33 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Verify commit exists in origin/develop
         run: git branch --remote --contains | grep origin/develop
+
       - name: Set VERSION variable from tag
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+
       - name: Setup SDK
         uses: ./.github/workflows/actions/setup-sdk-and-tools
-      - name: Initialize CodeQL #CodeQL Init
+
+      - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: csharp,javascript
+
       - name: Build
         uses: ./.github/workflows/actions/dotnet-build-release
+
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3 #CodeQL Analyze
+        uses: github/codeql-action/analyze@v3
+
       - name: Test
         uses: ./.github/workflows/actions/dotnet-test-release
+
       - name: Publish Packages
         uses: ./.github/workflows/actions/nuget-publish-all
+
       - name: Publish Images
         uses: ./.github/workflows/actions/docker-publish-all
         with:
