--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,11 +28,19 @@ jobs:
       - name: Setup SDK
         uses: ./.github/workflows/actions/setup-sdk-and-tools
 
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: csharp,javascript
+
       - name: Build
         uses: ./.github/workflows/actions/dotnet-build-release
 
       - name: Test
         uses: ./.github/workflows/actions/dotnet-test-release
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
 
       - name: Publish Packages
         uses: ./.github/workflows/actions/nuget-publish-all
