--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,6 +8,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  schedule:
+      - cron: '29 13 * * 0' # Every Sunday at 13:29 UTC
 
 jobs:
   build-and-sonar-scan:
