--- a/DRN.Framework.Utils/DRN.Framework.Utils.csproj
+++ b/DRN.Framework.Utils/DRN.Framework.Utils.csproj
@@ -50,6 +50,7 @@
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
         <!-- Transitive vulnerable packages overriden  -->
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
+        <PackageReference Include="System.Private.Uri" Version="4.3.2" />
         <PackageReference Include="System.Text.Json" Version="9.0.0" />
         <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
         <!-- Transitive vulnerable packages overriden  -->
