--- a/Sample.Hosted/Sample.Hosted.csproj
+++ b/Sample.Hosted/Sample.Hosted.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Folder Include="Pages\User\Profile\Models\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
