Sidebar Action menu  + Footer navigations added

--- a/DRN.Nexus.Hosted/appsettings.json
+++ b/DRN.Nexus.Hosted/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "ApplicationName":"DRN Nexus",
   "AllowedHosts": "*",
   "Kestrel": {
     "Docs": "https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints",
