--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -4,6 +4,7 @@
     "LaunchExternalDependencies": true,
     "UseHttpRequestLogger": true,
     "InternalRequestHttpVersion": "1.1",
-    "NexusAddress": "localhost:5988"
+    "NexusAddress": "localhost:5988",
+    "PrototypingMode": false
   }
 }
