--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -1,5 +1,8 @@
 ﻿{
-  "ApplicationName":"DRN Sample",
+  "ApplicationName": "DRN Sample",
+  "DrnAppFeatures": {
+    "SeedKey": "Our true mentor in life is science. — Mustafa Kemal Atatürk"
+  },
   "AllowedHosts": "*",
   "Kestrel": {
     "Docs": "https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints",
