--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -9,6 +9,9 @@ jobs:
   Publish-Develop:
     permissions:
       security-events: write
+      id-token: write
+      contents: read
+      attestations: write
     runs-on: ubuntu-latest
     env:
       NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
@@ -44,6 +47,16 @@ jobs:
 
       - name: Publish Packages
         uses: ./.github/workflows/actions/nuget-publish-all
+        
+      - name: Generate artifact attestation #https://andrewlock.net/creating-provenance-attestations-for-nuget-packages-in-github-actions/
+        uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2 # v2.2.3
+        with:
+          subject-path: 'artifacts/packages/*.nupkg'
+
+      - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: packages
+          path: artifacts/packages
 
       - name: Publish Images
         uses: ./.github/workflows/actions/docker-publish-all
