--- a/.github/workflows/actions/dotnet-test-release/action.yml
+++ b/.github/workflows/actions/dotnet-test-release/action.yml
@@ -2,6 +2,9 @@ name: Dotnet Test Release
 runs:
   using: "composite"
   steps:
-    - name: Test
+    - name: Test Unit
+      shell: bash
+      run: dotnet test DRN.Test/DRN.Test.Unit.csproj --no-build --verbosity normal --configuration Release
+    - name: Test Integration
       shell: bash
       run: dotnet test DRN.Test/DRN.Test.csproj --no-build --verbosity normal --configuration Release
