--- a/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
+++ b/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
@@ -48,7 +48,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.3" />
-        <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.0.0-preview.4" />
+        <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
         <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0"/>
         <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1"/>
