--- a/.github/workflows/actions/dotnet-test-release/action.yml
+++ b/.github/workflows/actions/dotnet-test-release/action.yml
@@ -4,7 +4,7 @@ runs:
   steps:
     - name: Test Unit
       shell: bash
-      run: dotnet test DRN.Test/DRN.Test.Unit.csproj --no-build --verbosity normal --configuration Release
+      run: dotnet test DRN.Test.Unit/DRN.Test.Unit.csproj --no-build --verbosity normal --configuration Release
     - name: Test Integration
       shell: bash
       run: dotnet test DRN.Test/DRN.Test.csproj --no-build --verbosity normal --configuration Release
