UnitTestContext, DataInlineUnitAttribute, DataMemberUnitAttribute, DataSelfUnitAttribute added.
IdGenerator integrated with SequenceManager<TEntity>

IdGenerator registered to utils module with ISourceKnownIdGenerator.

NexusAppSettings added.

--- a/DRN.Test.Unit/DRN.Test.Unit.csproj
+++ b/DRN.Test.Unit/DRN.Test.Unit.csproj
@@ -19,4 +19,10 @@
         <ProjectReference Include="..\Sample.Hosted\Sample.Hosted.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Settings\settings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
