Entity implementation refactored with new Source Known Id based EntityId implementation

--- a/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
+++ b/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
@@ -36,4 +36,11 @@
         </PropertyGroup>
     </Target>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="DRN.Test" />
+        <InternalsVisibleTo Include="DRN.Test.Unit" />
+        <InternalsVisibleTo Include="DRN.Framework.Utils" />
+        <InternalsVisibleTo Include="DRN.Framework.EntityFramework" />
+    </ItemGroup>
+
 </Project>
