--- a/DRN.Framework.Utils/DRN.Framework.Utils.csproj
+++ b/DRN.Framework.Utils/DRN.Framework.Utils.csproj
@@ -44,6 +44,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blake3" Version="2.0.0" />
         <PackageReference Include="Flurl.Http" Version="4.0.2" />
         <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.4.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
