--- a/DRN.Framework.Utils/DRN.Framework.Utils.csproj
+++ b/DRN.Framework.Utils/DRN.Framework.Utils.csproj
@@ -63,4 +63,8 @@
         <ProjectReference Include="..\DRN.Framework.SharedKernel\DRN.Framework.SharedKernel.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Generic\" />
+    </ItemGroup>
+
 </Project>
