Entity improvements + Id generation benchmarks added.

--- a/DRN.Framework.Utils/DRN.Framework.Utils.csproj
+++ b/DRN.Framework.Utils/DRN.Framework.Utils.csproj
@@ -39,6 +39,7 @@
     <ItemGroup>
         <InternalsVisibleTo Include="DRN.Test"/>
         <InternalsVisibleTo Include="DRN.Test.Unit"/>
+        <InternalsVisibleTo Include="DRN.Test.Performance"/>
         <InternalsVisibleTo Include="DRN.Framework.Hosting"/>
         <InternalsVisibleTo Include="DRN.Framework.Testing"/>
     </ItemGroup>
