--- a/Docker/Rabbitmq/Image/Dockerfile
+++ b/Docker/Rabbitmq/Image/Dockerfile
@@ -6,7 +6,7 @@ COPY rabbitmq_delayed_message_exchange-4.1.0.ez "$RABBITMQ_HOME"/plugins/rabbitm
 COPY definitions.json /etc/rabbitmq/
 COPY rabbitmq.conf /etc/rabbitmq/
 
-RUN chown rabbitmq:rabbitmq /etc/rabbitmq/rabbitmq.conf /etc/rabbitmq/definitions.json $RABBITMQ_HOME/plugins/rabbitmq_delayed_message_exchange-4.1.0.ez && \
+RUN chown rabbitmq:rabbitmq /etc/rabbitmq/rabbitmq.conf /etc/rabbitmq/definitions.json "$RABBITMQ_HOME"/plugins/rabbitmq_delayed_message_exchange-4.1.0.ez && \
     rabbitmq-plugins enable  \
     rabbitmq_management  \
     rabbitmq_delayed_message_exchange  \
