--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -4,7 +4,9 @@
     "LaunchExternalDependencies": true,
     "UseHttpRequestLogger": true,
     "InternalRequestHttpVersion": "1.1",
-    "NexusAddress": "localhost:5988",
     "PrototypingMode": false
+  },
+  "NexusAppSettings": {
+    "Address": "localhost:5988"
   }
 }
