Generic Entity Model added. Entity tests improved

--- a/Sample.Infra/Sample.Infra.csproj
+++ b/Sample.Infra/Sample.Infra.csproj
@@ -10,5 +10,9 @@
     <ProjectReference Include="..\DRN.Framework.EntityFramework\DRN.Framework.EntityFramework.csproj" />
     <ProjectReference Include="..\Sample.Domain\Sample.Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="QA\Migrations\" />
+  </ItemGroup>
   
 </Project>
