nuget packages updated + serilog configuration improvements

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -52,7 +52,8 @@
         "Args": {
           "hostnameOrAddress": "localhost",
           "port": "12201",
-          "transportType": "Udp"
+          "transportType": "Udp",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
       }
     ]
